--- a/src/pages/policies-and-downloads.astro
+++ b/src/pages/policies-and-downloads.astro
@@ -6,16 +6,16 @@ import { generateBreadcrumbs } from '~/utils/breadcrumbs';
 import { generateWebPageSchema } from '~/utils/schema-generators';
 
 const metadata = {
-  title: 'Self-Help',
+  title: 'Policies and Downloads',
 };
 
 // Breadcrumb schema
-const breadcrumbSchema = generateBreadcrumbs(Astro.url.pathname, Astro.site!, 'Self-Help');
+const breadcrumbSchema = generateBreadcrumbs(Astro.url.pathname, Astro.site!, 'Policies and Downloads');
 
 // WebPage schema
 const webPageSchema = generateWebPageSchema(
   Astro.url,
-  'Self-Help',
+  'Policies and Downloads',
   undefined,
   undefined,
   `${Astro.url.href}#breadcrumb`
@@ -27,5 +27,5 @@ const webPageSchema = generateWebPageSchema(
   <StructuredData schema={webPageSchema} />
   <StructuredData schema={breadcrumbSchema} />
 
-  <TextPageContent slug="self-help" />
+  <TextPageContent slug="policies-and-downloads" />
 </Layout>
