--- a/src/pages/consultation.astro
+++ b/src/pages/consultation.astro
@@ -37,7 +37,9 @@ const { title, subheading, image, image_alt, body, google_calendar_link } = cont
 const htmlContent = body ? marked.parse(body) : null;
 
 const metadata = {
-  title: title,
+  title: content.data.seo_settings?.metaTitle || title,
+  description: content.data.seo_settings?.metaDescription,
+  ignoreTitleTemplate: !!content.data.seo_settings?.metaTitle,
 };
 
 // Breadcrumb schema
